# EMG_Data_Generator

./: CMakeLists.txt  Makefile  buttonPallete.xml
src/: CMakeLists.txt  Frame.cpp  MainWindow.cpp  SerialPortWorker.cpp  main.cpp
src/include/: EmgDataModel.hpp  Frame.hpp  MainWindow.hpp  SerialPortWorker.hpp  SerialWorker.hpp
src/ui/MainWindow/: MainWindow.ui
